<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/ForestGreen">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ForestGreen"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/view_text_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/form_gender_prompt"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/view_gender_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ForestGreen"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/view_text_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/form_first_prompt"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/view_first_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ForestGreen"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/view_text_last"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/form_last_prompt"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/view_last_value"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="0.70"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ForestGreen"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/view_text_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/form_address_prompt"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/view_address_value"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="0.70"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ForestGreen"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/view_text_province"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/form_address_prompt"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/view_province_value"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="0.70"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ForestGreen"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/view_text_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/form_country_prompt"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/view_country_value"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="0.70"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/ForestGreen"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/view_text_postal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:text="@string/form_postal_prompt"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black" />

        <TextView
            android:id="@+id/view_postal_value"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="0.70"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/Black"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10in"
        android:background="@color/ForestGreen" />

</LinearLayout>